--- a/demo/vissense/demo.html
+++ b/demo/vissense/demo.html
@@ -2,33 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>vissense tests</title>
-  <link rel="stylesheet" href="http://localhost:3000/bower_components/qunit/qunit/qunit.css">
-  
-  <script src="http://localhost:3000/bower_components/qunit/qunit/qunit.js"></script>
-  <script src="http://localhost:3000/dist2/vissense.min.js"></script>
+  <title>demo and playground</title>
+  <script src="http://localhost:3000/dist/vissense.min.js"></script>
 
-  <style>
-  #info-widget {
-    position:fixed; 
-    z-index: 1000; 
-    right:10px; 
-    top:10px; 
-    min-width:400px;
-
-    font-weight:300; 
-    font-size: 1em;
-    font-family: Courier;
-    background-color: #ddd;
-  }
-
-dl{margin-top:0;margin-bottom:20px} dt,dd{line-height:1.428571429} dt{font-weight:700} dd{margin-left:0} .dl-horizontal dt{float:left;width:160px;clear:left;text-align:right;overflow:hidden;text-overf‌​low:ellipsis;white-space:nowrap} .dl-horizontal dd{margin-left:180px}
-  </style>
+  <link rel="stylesheet" href="http://localhost:3000/demo/vissense/demo.css">
 </head>
 <body>
-  <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
-
   <div id="info-widget"></div>
   <div class="spanner" style="width:2000px; height: 2000px;"></div>
 
@@ -55,10 +34,6 @@ dl{margin-top:0;margin-bottom:20px} dt,dd{line-height:1.428571429} dt{font-weigh
         '<dt>Duration: </dt>' +
         //'<dd>'+(Math.round(vis1.getDuration() / 10) / 100)+'s</dd>' +
     '</dl>'
-  });
-
-  test( "dummy test for humans", function() {
-    ok( 1 === 1, "");
   });
   </script>
 
