--- a/demo/vissense/demo_iframe.html
+++ b/demo/vissense/demo_iframe.html
@@ -2,20 +2,43 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>vissense tests</title>
-  <link rel="stylesheet" href="http://localhost:3000/bower_components/qunit/qunit/qunit.css">
-  
-  <script src="http://localhost:3000/bower_components/qunit/qunit/qunit.js"></script>
-  <script src="http://localhost:3000/dist2/vissense.min.js"></script>
+  <title>demo and playground iframe</title>
+  <script src="http://localhost:3000/dist/vissense.min.js"></script>
+  <link rel="stylesheet" href="http://localhost:3000/demo/vissense/demo.css">
 </head>
 <body>
 
-  <iframe id="iframe" src="demo.html" width="100%" height="500px"></iframe>
+<div id="info-widget" style="left: 0; top: 300px;"></div>
+  <iframe id="iframe"
+      src="demo.html"
+      width="100%"
+      height="500px"
+      scrolling="no"
+      style="overflow:hidden;  border: 10px dotted black;"
+  ></iframe>
   <div class="spanner" style="width:2000px; height: 2000px;"></div>
 
+
   <script>
-  test( "dummy test for humans", function() {
-    ok( 1 === 1, "");
+  var infoBox = document.getElementById('info-widget');
+
+  var element1 = document.getElementById('iframe');
+  var vis1 = new VisSense(element1);
+  var vistimer1 = vis1.timer();
+
+  vistimer1.every(200, 200, function() {
+    infoBox.innerHTML = '<dl>' +
+        '<dt>iframe: Visibility: </dt>' +
+        '<dd>'+ Math.round(vis1.getVisibilityPercentage() * 100 *100) / 100 +'%</dd>' +
+        '<dt>TimeVisible: </dt>' +
+        //'<dd>'+ (Math.round(vis1.getTimeVisible() / 10) / 100) +'s</dd>' +
+        '<dt>TimeFullyVisible: </dt>' +
+        //'<dd>'+ (Math.round(vis1.getTimeFullyVisible() / 10) / 100) +'s</dd>' +
+        '<dt>TimeVisibleRelative: </dt>' +
+        //'<dd>'+(Math.round(vis1.getTimeVisibleRelative() / 10) / 100)+'s</dd>' +
+        '<dt>Duration: </dt>' +
+        //'<dd>'+(Math.round(vis1.getDuration() / 10) / 100)+'s</dd>' +
+    '</dl>'
   });
   </script>
 </body>
