removed unnecessary syntactic sugar from core

--- a/src/test/core/isHidden/display_none.html
+++ b/src/test/core/isHidden/display_none.html
@@ -40,17 +40,17 @@
   
   test( "if element1 is hidden", function() {
     ok( true === vis1.isHidden(), "Passed: element1 is hidden" );
-    ok( 0 === vis1.getVisibilityPercentage(), "Passed: element1 is 0% visible");
+    ok( 0 === vis1.percentage(), "Passed: element1 is 0% visible");
   });
 
   test( "if element2 is hidden", function() {
     ok( true === vis2.isHidden(), "Passed: element2 is hidden" );
-    ok( 0 === vis2.getVisibilityPercentage(), "Passed: element2 is 0% visible");
+    ok( 0 === vis2.percentage(), "Passed: element2 is 0% visible");
   });
 
   test( "if element3 is hidden", function() {
     ok( true === vis3.isHidden(), "Passed: element3 is hidden" );
-    ok( 0 === vis3.getVisibilityPercentage(), "Passed: element3 is 0% visible");
+    ok( 0 === vis3.percentage(), "Passed: element3 is 0% visible");
   });
 
   </script>
