--- a/src/test/core/isFullyVisible/test1.html
+++ b/src/test/core/isFullyVisible/test1.html
@@ -21,7 +21,7 @@
 	test( "if element1 is fully visible", function() {
     ok( true === vis1.isVisible(), "Passed: element1 is visible" );
     ok( true === vis1.isFullyVisible(), "Passed: element1 is fully visible" );
-    ok( 1 === vis1.getVisibilityPercentage(), "Passed: element1 is 100% visible");
+    ok( 1 === vis1.percentage(), "Passed: element1 is 100% visible");
 	});
   </script>
 
