--- a/src/test/core/isVisible/test1.html
+++ b/src/test/core/isVisible/test1.html
@@ -47,22 +47,22 @@
 
   test( "if element1 is visible", function() {
     ok( true === vis1.isVisible(), "Passed: element1 is visible" );
-    ok( 1 === vis1.getVisibilityPercentage(), "Passed: element1 is 100% visible");
+    ok( 1 === vis1.percentage(), "Passed: element1 is 100% visible");
   });
   test( "if element2 is visible", function() {
     ok( true === vis2.isVisible(), "Passed: element2 is visible" );
     ok( true === !vis2.isFullyVisible(), "Passed: element2 is NOT fully visible" );
-    ok( 0.5 === vis2.getVisibilityPercentage(), "Passed: element2 is 50% visible" );
+    ok( 0.5 === vis2.percentage(), "Passed: element2 is 50% visible" );
   });
   test( "if element3 is visible", function() {
     ok( true === vis3.isVisible(), "Passed: element3 is visible" );
     ok( true === !vis3.isFullyVisible(), "Passed: element3 is NOT fully visible" );
-    ok( 0.25 === vis3.getVisibilityPercentage(), "Passed: element3 is 25% visible" );
+    ok( 0.25 === vis3.percentage(), "Passed: element3 is 25% visible" );
   });
   test( "if element4 is visible", function() {
     ok( true === vis4.isVisible(), "Passed: element4 is visible" );
     ok( true === !vis4.isFullyVisible(), "Passed: element4 is NOT fully visible" );
-    ok( 0.1 === vis4.getVisibilityPercentage(), "Passed: element4 is 1% visible" );
+    ok( 0.1 === vis4.percentage(), "Passed: element4 is 1% visible" );
   });
 
   </script>
