--- a/src/test/core/percentage/50.html
+++ b/src/test/core/percentage/50.html
@@ -9,26 +9,29 @@
   <script src="http://localhost:3000/dist/vissense.min.js"></script>
 
   <style>
-        #testNode1 {
-        height: 1px; width: 1px; background-color: red;
-        }
+      #testNode1 {
+          position: absolute; top: 0; left:-1px; height: 2px; width: 2px; background-color: red;
+      }
   </style>
 </head>
 <body>
+
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
 
   <div id="testNode1"></div>
-  
-  <script>
-	var element1 = document.getElementById('testNode1');
-	var vis1 = new VisSense(element1);
 
-	test( "if element1 is fully visible", function() {
+  <script>
+  var element1 = document.getElementById('testNode1');
+
+  var vis1 = new VisSense(element1);
+
+  test( "if element1 is 50% visible", function() {
     ok( true === vis1.isVisible(), "Passed: element1 is visible" );
-    ok( true === vis1.isFullyVisible(), "Passed: element1 is fully visible" );
-    ok( 1 === vis1.percentage(), "Passed: element1 is 100% visible");
-	});
+    ok( true === !vis1.isFullyVisible(), "Passed: element1 is NOT fully visible" );
+    ok( 0.5 === vis1.percentage(), "Passed: element1 is 50% visible" );
+  });
+
   </script>
 
 </body>
