--- a/src/test/core/isHidden/test1.html
+++ b/src/test/core/isHidden/test1.html
@@ -10,7 +10,7 @@
 
   <style>
         #testNode1 {
-        height: 1px; width: 1px; background-color: red;
+          height: 0; width: 1px; background-color: red;
         }
   </style>
 </head>
@@ -24,10 +24,11 @@
 	var element1 = document.getElementById('testNode1');
 	var vis1 = new VisSense(element1);
 
-	test( "if element1 is fully visible", function() {
-    ok( true === vis1.isVisible(), "Passed: element1 is visible" );
-    ok( true === vis1.isFullyVisible(), "Passed: element1 is fully visible" );
-    ok( 1 === vis1.percentage(), "Passed: element1 is 100% visible");
+	test( "if element1 is hidden", function() {
+    ok( true === vis1.isHidden(), "Passed: element1 is hidden" );
+    ok( false === vis1.isVisible(), "Passed: element1 is NOT visible" );
+    ok( false === vis1.isFullyVisible(), "Passed: element1 is NOT fully visible" );
+    ok( 0 === vis1.percentage(), "Passed: element1 is 0% visible");
 	});
   </script>
 
