--- a/src/test/utils/elementstyling/display_none.html
+++ b/src/test/utils/elementstyling/display_none.html
@@ -51,21 +51,24 @@
   var vis3 = VisSense(element3);
   
   test( "if element1 is hidden", function() {
-    ok( false === VisSenseUtils.isVisibleByStyling(element1), "Passed: element1 is not displayed" );
-    ok( true === vis1.isHidden(), "Passed: element1 is hidden" );
-    ok( 0 === vis1.percentage(), "Passed: element1 is 0% visible");
+    ok( false === VisSenseUtils._isDisplayed(element1), "Passed: element is not displayed" );
+    ok( false === VisSenseUtils.isVisibleByStyling(element1), "Passed: element is not visible by styling" );
+    ok( true === vis1.isHidden(), "Passed: element is hidden" );
+    ok( 0 === vis1.percentage(), "Passed: element is 0% visible");
   });
 
   test( "if element2 is hidden", function() {
-    ok( false === VisSenseUtils.isDisplayed(element2), "Passed: element2 is not displayed" );
-    ok( true === vis2.isHidden(), "Passed: element2 is hidden" );
-    ok( 0 === vis2.percentage(), "Passed: element2 is 0% visible");
+    ok( false === VisSenseUtils._isDisplayed(element1), "Passed: element is not displayed" );
+    ok( false === VisSenseUtils.isVisibleByStyling(element1), "Passed: element is not visible by styling" );
+    ok( true === vis1.isHidden(), "Passed: element is hidden" );
+    ok( 0 === vis1.percentage(), "Passed: element is 0% visible");
   });
 
   test( "if element3 is hidden", function() {
-    ok( false === VisSenseUtils.isDisplayed(element3), "Passed: element3 is not displayed" );
-    ok( true === vis3.isHidden(), "Passed: element3 is hidden" );
-    ok( 0 === vis3.percentage(), "Passed: element3 is 0% visible");
+    ok( false === VisSenseUtils._isDisplayed(element3), "Passed: element is not displayed" );
+    ok( false === VisSenseUtils.isVisibleByStyling(element3), "Passed: element is not visible by styling" );
+    ok( true === vis3.isHidden(), "Passed: element is hidden" );
+    ok( 0 === vis3.percentage(), "Passed: element is 0% visible");
   });
 
   </script>
