outsourced main functionallity of vistimer to againjs; include againjs with bower

--- a/src/test/timer/stop/once.html
+++ b/src/test/timer/stop/once.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="http://localhost:3000/bower_components/qunit/qunit/qunit.css">
   
   <script src="http://localhost:3000/bower_components/qunit/qunit/qunit.js"></script>
-  <script src="http://localhost:3000/dist/vissense.min.js"></script>
+  <script src="http://localhost:3000/dist/vissense.js"></script>
 </head>
 <body>
 
