more plugin tests; added monitor tests

--- a/src/test/plugins/percentage_time_test/50_1_test/test_passed.html
+++ b/src/test/plugins/percentage_time_test/50_1_test/test_passed.html
@@ -26,7 +26,7 @@
     var vis1 = new VisSense(element1);
 
     asyncTest( "test if 50/1 rule passed", function() {
-        expect(1);
+        expect(3);
         var invocations = 0;
 
         vis1.on50_1TestPassed(function() {
@@ -34,7 +34,15 @@
         });
 
         setTimeout(function () {
+            ok( 0 === invocations, "50/1 rule has NOT been passed (yet)");
+        }, 999);
+
+        setTimeout(function () {
             ok( 1 === invocations, "50/1 rule has been passed");
+        }, 1000 + 2 /*give it 2 extra milliseconds*/);
+
+        setTimeout(function () {
+            ok( 1 === invocations, "50/1 rule has been passed and callback has been invoked only once");
 
             start(); // <- last timeout must call ´start´
         }, 3500);
