--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -19,8 +19,11 @@
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/customMatchersHelper.js"></script>
-  <script type="text/javascript" src="spec/elementsHelper.js"></script>
+  <script type="text/javascript" src="spec/fixturesHelper.js"></script>
   <script type="text/javascript" src="spec/vissenseUtilsSpec.js"></script>
+  <script type="text/javascript" src="spec/vissenseCoreSpec.js"></script>
+  <script type="text/javascript" src="spec/vissenseMonitorSpec.js"></script>
+  <script type="text/javascript" src="spec/vissenseTimerSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
