element is hidden when opacity <= 1% (instead of < 1%)

--- a/spec/javascripts/fixtures/fullyvisible_styling-opacity.html
+++ b/spec/javascripts/fixtures/fullyvisible_styling-opacity.html
@@ -1,1 +1,6 @@
-<div id="element" style="width: 10px; height: 10px; opacity: 0.015; background-color:red;"></div>
+<!-- /*
+
+opacity: 0.015 will return 0.01 on Opera.
+*/ -->
+
+<div id="element" style="width: 10px; height: 10px; opacity: 0.016; background-color:red;"></div>
