removed dependency to Visibility.js

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -54,6 +54,11 @@
     })();
   </script>
 
+  <script type="text/javascript">
+    /* indicator to set fixture path - @see spec/fixturesHelper.js*/
+    window.VisSenseSpecRunner = 13;
+  </script>
+
 </head>
 
 <body>
