--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,10 +10,19 @@
   <script type="text/javascript" src="bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
   <script type="text/javascript" src="bower_components/jasmine/lib/jasmine-core/boot/boot.js"></script>
 
+  <script type="text/javascript">
+    // allow sauce to query for the jasmine report
+    // because we have to load the page before starting the test, so the thing
+    // sauce queries for might not be setup yet
+    if(!window.jasmine.getJSReport) {
+      window.jasmine.getJSReport = function() {};
+    }
+  </script>
   <!-- include source files here... -->
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="bower_components/lodash/dist/lodash.min.js"></script>
   <script type="text/javascript" src="bower_components/jasmine-jquery/lib/jasmine-jquery.js"></script>
+  <script type="text/javascript" src="bower_components/jasmine-jsreporter/jasmine-jsreporter.js"></script>
 
   <script type="text/javascript" src="dist/vissense.js"></script>
 
@@ -23,37 +32,15 @@
   <script type="text/javascript" src="spec/vissenseUtilsSpec.js"></script>
   <script type="text/javascript" src="spec/vissenseCoreSpec.js"></script>
   <script type="text/javascript" src="spec/vissenseMonitorSpec.js"></script>
-  <script type="text/javascript" src="spec/vissenseTimerSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
       var jasmineEnv = jasmine.getEnv();
-      jasmineEnv.updateInterval = 1000;
 
-      var htmlReporter = new jasmine.HtmlReporter({});
-
-      jasmineEnv.addReporter(htmlReporter);
-
-      jasmineEnv.specFilter = function(spec) {
-        return htmlReporter.specFilter(spec);
-      };
-
-      var currentWindowOnload = window.onload;
-
-      window.onload = function() {
-        if (currentWindowOnload) {
-          currentWindowOnload();
-        }
-        execJasmine();
-      };
-
-      function execJasmine() {
-        jasmineEnv.execute();
-      }
+      jasmineEnv.addReporter(new jasmine.JSReporter2());
 
     })();
   </script>
-
 </head>
 
 <body>
