--- a/spec/javascripts/fixtures/hidden_styling-display-none_nested.html
+++ b/spec/javascripts/fixtures/hidden_styling-display-none_nested.html
@@ -1,7 +1,9 @@
 <div>
-    <div style="display: none;">
-        <div>        <div>
-            <div id="element" style="width: 10px; height: 10x;"></div>
-        </div></div>
+  <div style="display: none;">
+    <div>
+      <div>
+        <div id="element" style="width: 10px; height: 10x;"></div>
+      </div>
     </div>
+  </div>
 </div>
