--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@ var visibility_monitor = visibility.monitor({
     video.stop(); 
   }
 }).start();</code></pre>
+<h2><a href="https://vissense.github.io/vissense/">Documentation</a></h2>
+<p>See <a href="https://vissense.github.io/vissense/">vissense.github.io/vissense</a> or generate the documentation locally.</p>
+<h4>Generate documentation</h4>
+<p>Clone the repository and run <code>grunt docs</code></p>
 <h2>Download</h2>
 <h3>Bower</h3>
 <p>Install with bower</p>
@@ -192,8 +196,6 @@ var visibility_monitor = visibility.monitor({
 <p>or</p>
 <p><code>grunt serve</code></p>
 <p>and it automatically opens <code>http://localhost:3000/SpecRunner.html</code> in your browser.</p>
-<h4>Generate documentation</h4>
-<p><code>grunt docs</code></p>
 <h2>API</h2>
 <h3>new VisSense([options])</h3>
 <p>Object constructor. Options:</p>
