fix spelling mistake in test html fixtures; 10x -> 10px

--- a/spec/javascripts/fixtures/hidden_styling-visibility-hidden.html
+++ b/spec/javascripts/fixtures/hidden_styling-visibility-hidden.html
@@ -1,1 +1,1 @@
-<div id="element" style="width: 10px; height: 10x; visibility: hidden;"></div>
+<div id="element" style="width: 10px; height: 10px; visibility: hidden;"></div>
