--- a/spec/javascripts/fixtures/hidden_styling-visibility-hidden_nested.html
+++ b/spec/javascripts/fixtures/hidden_styling-visibility-hidden_nested.html
@@ -2,7 +2,7 @@
   <div style="visibility: hidden;">
     <div>
       <div>
-        <div id="element" style="width: 10px; height: 10x;"></div>
+        <div id="element" style="width: 10px; height: 10px;"></div>
       </div>
     </div>
   </div>
