--- a/spec/javascripts/fixtures/hidden_styling-display-none.html
+++ b/spec/javascripts/fixtures/hidden_styling-display-none.html
@@ -1,1 +1,1 @@
-<div id="element" style="width: 10px; height: 10x; display: none;"></div>
+<div id="element" style="width: 10px; height: 10px; display: none;"></div>
