add "behind scrollbar" to false positive list

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -33,6 +33,7 @@
   <script type="text/javascript" src="spec/vissenseUtilsSpec.js"></script>
   <script type="text/javascript" src="spec/vissenseCoreSpec.js"></script>
   <script type="text/javascript" src="spec/vissenseMonitorSpec.js"></script>
+  <script type="text/javascript" src="spec/vissenseFalsePositivesSpec.js"></script>
 
   <script type="text/javascript">
     (function () {
