#30 support for commonjs

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -30,6 +30,7 @@
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/customMatchersHelper.js"></script>
   <script type="text/javascript" src="spec/fixturesHelper.js"></script>
+  <script type="text/javascript" src="spec/vissenseUmdSpec_.js"></script>
   <script type="text/javascript" src="spec/vissenseUtilsSpec.js"></script>
   <script type="text/javascript" src="spec/vissenseCoreSpec.js"></script>
   <script type="text/javascript" src="spec/vissenseMonitorSpec.js"></script>
